Tune of lab4, small brushup

--- a/lab4-fuzzy/fuzzy-inference.ipynb
+++ b/lab4-fuzzy/fuzzy-inference.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-11T05:19:50.998329811Z",
-     "start_time": "2023-06-11T05:19:50.955514403Z"
+     "end_time": "2023-06-11T05:22:24.178309369Z",
+     "start_time": "2023-06-11T05:22:24.136631419Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 135,
    "outputs": [],
    "source": [
     "# Загрузка базы знаний из файла\n",
@@ -31,39 +31,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T05:19:51.000326397Z",
-     "start_time": "2023-06-11T05:19:50.998514700Z"
+     "end_time": "2023-06-11T05:22:24.180284392Z",
+     "start_time": "2023-06-11T05:22:24.178470894Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 136,
    "outputs": [],
    "source": [
     "# Функция для фаззификации\n",
     "def fuzzify(value, term):\n",
     "    x = np.linspace(0, 100, 100)\n",
     "    mfx = fuzz.trimf(x, term)\n",
-    "    return fuzz.interp_membership(x, mfx, value)\n",
-    "\n",
-    "\n",
-    "# Функция для дефаззификации\n",
-    "def defuzzify(value, term):\n",
-    "    x = np.linspace(0, 100, 100)\n",
-    "    return fuzz.defuzz(x, term, 'centroid')"
+    "    return fuzz.interp_membership(x, mfx, value)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T05:19:51.000425724Z",
-     "start_time": "2023-06-11T05:19:50.998683027Z"
+     "end_time": "2023-06-11T05:22:24.180376736Z",
+     "start_time": "2023-06-11T05:22:24.178609485Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 137,
    "outputs": [],
    "source": [
     "# Функция для применения правил\n",
@@ -76,14 +70,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T05:19:51.000484425Z",
-     "start_time": "2023-06-11T05:19:50.998776754Z"
+     "end_time": "2023-06-11T05:22:24.180431650Z",
+     "start_time": "2023-06-11T05:22:24.178705716Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 138,
    "outputs": [],
    "source": [
     "# Функция для проверки условия в антецеденте\n",
@@ -116,14 +110,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T05:19:51.000536523Z",
-     "start_time": "2023-06-11T05:19:50.998865752Z"
+     "end_time": "2023-06-11T05:22:24.180480272Z",
+     "start_time": "2023-06-11T05:22:24.178800134Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 139,
    "outputs": [],
    "source": [
     "# Функция для визуализации\n",
@@ -150,14 +144,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T05:19:51.000598330Z",
-     "start_time": "2023-06-11T05:19:50.998960200Z"
+     "end_time": "2023-06-11T05:22:24.180528883Z",
+     "start_time": "2023-06-11T05:22:24.178895244Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 140,
    "outputs": [
     {
      "name": "stdout",
@@ -204,18 +198,15 @@
     "# Для каждого пользователя рисуем график\n",
     "for user in users:\n",
     "    result = apply_rules(user, rules, knowledge_base)\n",
-    "    if result:\n",
-    "        print(f\"Решение для пользователя {user}: {result['value']}\")\n",
-    "    else:\n",
-    "        print(f\"Решение для пользователя {user}: Нет подходящего решения\")\n",
+    "    print(f\"Решение для пользователя {user}: {result['value']}\")\n",
     "\n",
     "visualize(users, rules, knowledge_base)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T05:19:51.131108175Z",
-     "start_time": "2023-06-11T05:19:50.999125071Z"
+     "end_time": "2023-06-11T05:22:24.299570338Z",
+     "start_time": "2023-06-11T05:22:24.179035117Z"
     }
    }
   }
