lab5 added, tune of other labs

--- a/lab1-tempor/tempor_v1_nodb.ipynb
+++ b/lab1-tempor/tempor_v1_nodb.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Разработка и исследование «темпорального процессора» для информационно-аналитических систем\n",
+    "# Лабораторная работа №1\n",
+    "\n",
+    "> Разработка и исследование «темпорального процессора» для информационно-аналитических систем\n",
     "\n",
     "1. Рассмотрение теоретической части задания;\n",
     "2. Представление общей структуры темпорального процессора;\n",
@@ -47,8 +49,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:07:18.944012457Z",
-     "start_time": "2023-06-04T12:07:18.830827157Z"
+     "end_time": "2023-06-11T11:48:12.059121320Z",
+     "start_time": "2023-06-11T11:48:11.942215400Z"
     }
    }
   },
@@ -71,8 +73,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:07:18.947249819Z",
-     "start_time": "2023-06-04T12:07:18.944948819Z"
+     "end_time": "2023-06-11T11:48:12.061561705Z",
+     "start_time": "2023-06-11T11:48:12.060644598Z"
     }
    }
   },
@@ -118,8 +120,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:07:19.217337508Z",
-     "start_time": "2023-06-04T12:07:18.948586855Z"
+     "end_time": "2023-06-11T11:48:12.338806790Z",
+     "start_time": "2023-06-11T11:48:12.062894014Z"
     }
    }
   },
@@ -151,8 +153,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:07:19.262864492Z",
-     "start_time": "2023-06-04T12:07:19.220064629Z"
+     "end_time": "2023-06-11T11:48:12.342792365Z",
+     "start_time": "2023-06-11T11:48:12.341359307Z"
     }
    }
   },
@@ -171,19 +173,19 @@
    "outputs": [],
    "source": [
     "# Здесь мы просто определяем, происходит ли одно событие после другого\n",
-    "def temporal_relation(event1, event2):\n",
-    "    if event1['end_time'] < event2['start_time']:\n",
-    "        return 'event1 happens before event2'\n",
-    "    elif event2['end_time'] < event1['start_time']:\n",
-    "        return 'event2 happens before event1'\n",
+    "def temporal_relation(event0, event1):\n",
+    "    if event0['end_time'] < event1['start_time']:\n",
+    "        return '[0] произошло перед [1]'\n",
+    "    elif event1['end_time'] < event0['start_time']:\n",
+    "        return '[1] произошло перед [0]'\n",
     "    else:\n",
-    "        return 'events overlap'"
+    "        return 'события перекрываются'"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:07:19.263521488Z",
-     "start_time": "2023-06-04T12:07:19.263058627Z"
+     "end_time": "2023-06-11T11:48:12.346224267Z",
+     "start_time": "2023-06-11T11:48:12.343717868Z"
     }
    }
   },
@@ -195,25 +197,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relation between event0 and event1: event1 happens before event2\n",
-      "Relation between event1 and event2: event2 happens before event1\n",
-      "Relation between event2 and event3: event1 happens before event2\n",
-      "Relation between event3 and event4: event1 happens before event2\n"
+      "Отношение между [0]event0 и [1]event1: [0] произошло перед [1]\n",
+      "Отношение между [0]event1 и [1]event2: [1] произошло перед [0]\n",
+      "Отношение между [0]event2 и [1]event3: [0] произошло перед [1]\n",
+      "Отношение между [0]event3 и [1]event4: [0] произошло перед [1]\n"
      ]
     }
    ],
    "source": [
     "# Применяем функцию к каждой паре событий\n",
     "for i in range(len(df_simulation) - 1):\n",
-    "    event1 = df_simulation.iloc[i]\n",
-    "    event2 = df_simulation.iloc[i + 1]\n",
-    "    print(f'Relation between {event1[\"event\"]} and {event2[\"event\"]}: {temporal_relation(event1, event2)}')"
+    "    event0 = df_simulation.iloc[i]\n",
+    "    event1 = df_simulation.iloc[i + 1]\n",
+    "    print(f'Отношение между [0]{event0[\"event\"]} и [1]{event1[\"event\"]}: {temporal_relation(event0, event1)}')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:07:19.263771859Z",
-     "start_time": "2023-06-04T12:07:19.263164516Z"
+     "end_time": "2023-06-11T11:48:12.349199680Z",
+     "start_time": "2023-06-11T11:48:12.346621485Z"
     }
    }
   },
@@ -244,8 +246,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:07:19.263882998Z",
-     "start_time": "2023-06-04T12:07:19.263228767Z"
+     "end_time": "2023-06-11T11:48:12.390259468Z",
+     "start_time": "2023-06-11T11:48:12.349651241Z"
     }
    }
   }
