--- a/lab1-tempor/tempor_v2_sqlite.ipynb
+++ b/lab1-tempor/tempor_v2_sqlite.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -56,8 +56,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:09:09.115452841Z",
-     "start_time": "2023-06-04T12:09:09.106771408Z"
+     "end_time": "2023-06-11T11:48:59.445133851Z",
+     "start_time": "2023-06-11T11:48:59.423917832Z"
     }
    }
   },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "import sqlite3\n",
@@ -94,8 +94,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:09:09.239559250Z",
-     "start_time": "2023-06-04T12:09:09.106975502Z"
+     "end_time": "2023-06-11T11:48:59.445710146Z",
+     "start_time": "2023-06-11T11:48:59.429056668Z"
     }
    }
   },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "df['duration'] = (df['end_time'] - df['start_time']).dt.total_seconds()"
@@ -118,8 +118,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:09:09.241665133Z",
-     "start_time": "2023-06-04T12:09:09.239829830Z"
+     "end_time": "2023-06-11T11:48:59.446246286Z",
+     "start_time": "2023-06-11T11:48:59.432932436Z"
     }
    }
   },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -165,8 +165,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:09:09.515980311Z",
-     "start_time": "2023-06-04T12:09:09.242302061Z"
+     "end_time": "2023-06-11T11:48:59.573639080Z",
+     "start_time": "2023-06-11T11:48:59.482160571Z"
     }
    }
   },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# Имитация пяти темпоральных процессов и позиции наблюдателя\n",
@@ -198,8 +198,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:09:09.560867824Z",
-     "start_time": "2023-06-04T12:09:09.518362122Z"
+     "end_time": "2023-06-11T11:48:59.573738878Z",
+     "start_time": "2023-06-11T11:48:59.566248765Z"
     }
    }
   },
@@ -214,53 +214,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "# Здесь мы просто определяем, происходит ли одно событие после другого\n",
-    "def temporal_relation(event1, event2):\n",
-    "    if event1['end_time'] < event2['start_time']:\n",
-    "        return 'event1 happens before event2'\n",
-    "    elif event2['end_time'] < event1['start_time']:\n",
-    "        return 'event2 happens before event1'\n",
+    "def temporal_relation(event0, event1):\n",
+    "    if event0['end_time'] < event1['start_time']:\n",
+    "        return '[0] произошло перед [1]'\n",
+    "    elif event1['end_time'] < event0['start_time']:\n",
+    "        return '[1] произошло перед [0]'\n",
     "    else:\n",
-    "        return 'events overlap'"
+    "        return 'события перекрываются'"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:09:09.561026312Z",
-     "start_time": "2023-06-04T12:09:09.558782030Z"
+     "end_time": "2023-06-11T11:48:59.573790725Z",
+     "start_time": "2023-06-11T11:48:59.566329958Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relation between event0 and event1: event1 happens before event2\n",
-      "Relation between event1 and event2: event2 happens before event1\n",
-      "Relation between event2 and event3: event1 happens before event2\n",
-      "Relation between event3 and event4: event1 happens before event2\n"
+      "Отношение между [0]event0 и [1]event1: [0] произошло перед [1]\n",
+      "Отношение между [0]event1 и [1]event2: [1] произошло перед [0]\n",
+      "Отношение между [0]event2 и [1]event3: [0] произошло перед [1]\n",
+      "Отношение между [0]event3 и [1]event4: [0] произошло перед [1]\n"
      ]
     }
    ],
    "source": [
     "# Применяем функцию к каждой паре событий\n",
     "for i in range(len(df_simulation) - 1):\n",
-    "    event1 = df_simulation.iloc[i]\n",
-    "    event2 = df_simulation.iloc[i + 1]\n",
-    "    print(f'Relation between {event1[\"event\"]} and {event2[\"event\"]}: {temporal_relation(event1, event2)}')"
+    "    event0 = df_simulation.iloc[i]\n",
+    "    event1 = df_simulation.iloc[i + 1]\n",
+    "    print(f'Отношение между [0]{event0[\"event\"]} и [1]{event1[\"event\"]}: {temporal_relation(event0, event1)}')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:09:09.561223393Z",
-     "start_time": "2023-06-04T12:09:09.558861810Z"
+     "end_time": "2023-06-11T11:48:59.573887077Z",
+     "start_time": "2023-06-11T11:48:59.566376165Z"
     }
    }
   },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "import json\n",
@@ -291,8 +291,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-04T12:09:09.561315967Z",
-     "start_time": "2023-06-04T12:09:09.558915220Z"
+     "end_time": "2023-06-11T11:48:59.573933695Z",
+     "start_time": "2023-06-11T11:48:59.566444383Z"
     }
    }
   }
