--- a/lab5-fuzzy-explain/fuzzy-inference.ipynb
+++ b/lab5-fuzzy-explain/fuzzy-inference.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 157,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-11T13:25:43.330494389Z",
-     "start_time": "2023-06-11T13:25:43.290598545Z"
+     "end_time": "2023-06-11T11:40:12.674332284Z",
+     "start_time": "2023-06-11T11:40:12.631452882Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 158,
    "outputs": [],
    "source": [
     "# Загрузка базы знаний из файла\n",
@@ -31,14 +31,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T13:25:43.331638012Z",
-     "start_time": "2023-06-11T13:25:43.330780468Z"
+     "end_time": "2023-06-11T11:40:12.675354431Z",
+     "start_time": "2023-06-11T11:40:12.674465425Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 159,
    "outputs": [],
    "source": [
     "# Функция для фаззификации\n",
@@ -50,14 +50,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T13:25:43.331709056Z",
-     "start_time": "2023-06-11T13:25:43.330975134Z"
+     "end_time": "2023-06-11T11:40:12.675414564Z",
+     "start_time": "2023-06-11T11:40:12.674602554Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 160,
    "outputs": [],
    "source": [
     "# Функция для применения правил\n",
@@ -70,14 +70,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T13:25:43.331756756Z",
-     "start_time": "2023-06-11T13:25:43.331104217Z"
+     "end_time": "2023-06-11T11:40:12.675452446Z",
+     "start_time": "2023-06-11T11:40:12.674709095Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 161,
    "outputs": [],
    "source": [
     "# Функция для проверки условия в антецеденте\n",
@@ -110,14 +110,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T13:25:43.331804736Z",
-     "start_time": "2023-06-11T13:25:43.331187324Z"
+     "end_time": "2023-06-11T11:40:12.675494866Z",
+     "start_time": "2023-06-11T11:40:12.674812780Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 162,
    "outputs": [],
    "source": [
     "# Функция для визуализации\n",
@@ -144,14 +144,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T13:25:43.331845944Z",
-     "start_time": "2023-06-11T13:25:43.331265010Z"
+     "end_time": "2023-06-11T11:40:12.675529481Z",
+     "start_time": "2023-06-11T11:40:12.674905986Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 163,
    "outputs": [],
    "source": [
     "def explain_decision(user, rules, knowledge_base):\n",
@@ -177,30 +177,30 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T13:25:43.331888344Z",
-     "start_time": "2023-06-11T13:25:43.331370709Z"
+     "end_time": "2023-06-11T11:40:12.675572131Z",
+     "start_time": "2023-06-11T11:40:12.675074473Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 164,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Решение для пользователя {'age': 20, 'income': 20000, 'credit_history': 'bad'}: rejected\n",
-      "Решение для пользователя {'age': 15, 'income': 25000, 'credit_history': 'good'}: rejected\n",
-      "Решение для пользователя {'age': 30, 'income': 80000, 'credit_history': 'good'}: approved\n",
-      "Решение для пользователя {'age': 50, 'income': 50000, 'credit_history': 'good'}: approved\n",
-      "Решение для пользователя {'age': 35, 'income': 60000, 'credit_history': 'good'}: approved\n",
-      "Решение для пользователя {'age': 22, 'income': 30000, 'credit_history': 'good'}: rejected\n",
-      "Решение для пользователя {'age': 80, 'income': 100000, 'credit_history': 'good'}: rejected\n",
-      "Решение для пользователя {'age': 50, 'income': 80000, 'credit_history': 'bad'}: rejected\n",
-      "Решение для пользователя {'age': 30, 'income': 40000, 'credit_history': 'good'}: approved\n",
-      "Решение для пользователя {'age': 25, 'income': 60000, 'credit_history': 'good'}: approved\n",
-      "Решение для пользователя {'age': 45, 'income': 70000, 'credit_history': 'bad'}: rejected\n"
+      "Решение для пользователя {'age': 20, 'income': 20000, 'credit_history': 'bad'}: {'user': {'age': 20, 'income': 20000, 'credit_history': 'bad'}, 'antecedent_values': [], 'consequent_value': None}\n",
+      "Решение для пользователя {'age': 15, 'income': 25000, 'credit_history': 'good'}: {'user': {'age': 15, 'income': 25000, 'credit_history': 'good'}, 'antecedent_values': [], 'consequent_value': None}\n",
+      "Решение для пользователя {'age': 30, 'income': 80000, 'credit_history': 'good'}: {'user': {'age': 30, 'income': 80000, 'credit_history': 'good'}, 'antecedent_values': [[{'attribute': 'age', 'fuzzy_set': 'middle_aged'}, {'attribute': 'income', 'fuzzy_set': 'medium'}, {'attribute': 'credit_history', 'operator': 'eq', 'value': 'good'}]], 'consequent_value': {'attribute': 'credit', 'value': 'approved'}}\n",
+      "Решение для пользователя {'age': 50, 'income': 50000, 'credit_history': 'good'}: {'user': {'age': 50, 'income': 50000, 'credit_history': 'good'}, 'antecedent_values': [[{'attribute': 'age', 'fuzzy_set': 'middle_aged'}, {'attribute': 'income', 'fuzzy_set': 'medium'}, {'attribute': 'credit_history', 'operator': 'eq', 'value': 'good'}]], 'consequent_value': {'attribute': 'credit', 'value': 'approved'}}\n",
+      "Решение для пользователя {'age': 35, 'income': 60000, 'credit_history': 'good'}: {'user': {'age': 35, 'income': 60000, 'credit_history': 'good'}, 'antecedent_values': [[{'attribute': 'age', 'fuzzy_set': 'middle_aged'}, {'attribute': 'income', 'fuzzy_set': 'medium'}, {'attribute': 'credit_history', 'operator': 'eq', 'value': 'good'}]], 'consequent_value': {'attribute': 'credit', 'value': 'approved'}}\n",
+      "Решение для пользователя {'age': 22, 'income': 30000, 'credit_history': 'good'}: {'user': {'age': 22, 'income': 30000, 'credit_history': 'good'}, 'antecedent_values': [], 'consequent_value': None}\n",
+      "Решение для пользователя {'age': 80, 'income': 100000, 'credit_history': 'good'}: {'user': {'age': 80, 'income': 100000, 'credit_history': 'good'}, 'antecedent_values': [], 'consequent_value': None}\n",
+      "Решение для пользователя {'age': 50, 'income': 80000, 'credit_history': 'bad'}: {'user': {'age': 50, 'income': 80000, 'credit_history': 'bad'}, 'antecedent_values': [], 'consequent_value': None}\n",
+      "Решение для пользователя {'age': 30, 'income': 40000, 'credit_history': 'good'}: {'user': {'age': 30, 'income': 40000, 'credit_history': 'good'}, 'antecedent_values': [[{'attribute': 'age', 'fuzzy_set': 'middle_aged'}, {'attribute': 'income', 'fuzzy_set': 'medium'}, {'attribute': 'credit_history', 'operator': 'eq', 'value': 'good'}]], 'consequent_value': {'attribute': 'credit', 'value': 'approved'}}\n",
+      "Решение для пользователя {'age': 25, 'income': 60000, 'credit_history': 'good'}: {'user': {'age': 25, 'income': 60000, 'credit_history': 'good'}, 'antecedent_values': [[{'attribute': 'age', 'fuzzy_set': 'middle_aged'}, {'attribute': 'income', 'fuzzy_set': 'medium'}, {'attribute': 'credit_history', 'operator': 'eq', 'value': 'good'}]], 'consequent_value': {'attribute': 'credit', 'value': 'approved'}}\n",
+      "Решение для пользователя {'age': 45, 'income': 70000, 'credit_history': 'bad'}: {'user': {'age': 45, 'income': 70000, 'credit_history': 'bad'}, 'antecedent_values': [], 'consequent_value': None}\n"
      ]
     },
     {
@@ -231,7 +231,8 @@
     "# Для каждого пользователя рисуем график\n",
     "for user in users:\n",
     "    result = apply_rules(user, rules, knowledge_base)\n",
-    "    print(f\"Решение для пользователя {user}: {result['value']}\")\n",
+    "    explanation = explain_decision(user, rules, knowledge_base)\n",
+    "    print(f\"Решение для пользователя {user}: {explanation}\")\n",
     "\n",
     "\n",
     "visualize(users, rules, knowledge_base)"
@@ -239,8 +240,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T13:25:43.471040697Z",
-     "start_time": "2023-06-11T13:25:43.331440340Z"
+     "end_time": "2023-06-11T11:40:12.788660785Z",
+     "start_time": "2023-06-11T11:40:12.675160135Z"
     }
    }
   }
