Tune of lab4, charts added

--- a/lab4-fuzzy/fuzzy-inference.ipynb
+++ b/lab4-fuzzy/fuzzy-inference.ipynb
@@ -18,25 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 440,
    "outputs": [],
    "source": [
     "# Импорт необходимых библиотек\n",
     "import numpy as np\n",
     "import skfuzzy as fuzz\n",
-    "import yaml"
+    "import yaml\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fuzzy_limit = 0.25"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T01:11:52.246859647Z",
-     "start_time": "2023-06-13T01:11:52.206562859Z"
+     "end_time": "2023-06-13T02:11:36.978839336Z",
+     "start_time": "2023-06-13T02:11:36.935015647Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 441,
    "outputs": [],
    "source": [
     "# Загрузка базы знаний из файла\n",
@@ -46,21 +49,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T01:11:52.248671626Z",
-     "start_time": "2023-06-13T01:11:52.247008938Z"
+     "end_time": "2023-06-13T02:11:36.979936670Z",
+     "start_time": "2023-06-13T02:11:36.978985671Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 442,
    "outputs": [],
    "source": [
     "# Функция подсчитывает степень принадлежности значения к каждому нечеткому множеству\n",
     "def fuzzify(value, fuzzy_sets):\n",
     "    memberships = {}\n",
     "    for fuzzy_set_name, points in fuzzy_sets.items():\n",
-    "        x = np.linspace(0, max(points), 50)\n",
+    "        x = np.linspace(0, max(points), 100)\n",
     "        membership_function = fuzz.trapmf(x, points)\n",
     "        memberships[fuzzy_set_name] = fuzz.interp_membership(x, membership_function, value)\n",
     "    return memberships"
@@ -68,14 +71,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T01:11:52.248733602Z",
-     "start_time": "2023-06-13T01:11:52.247112112Z"
+     "end_time": "2023-06-13T02:11:36.980011050Z",
+     "start_time": "2023-06-13T02:11:36.979089246Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 443,
    "outputs": [],
    "source": [
     "# Функция оценивает условие для каждого подмножества антецедентов (предшествующих условий)\n",
@@ -98,14 +101,62 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T01:11:52.248784779Z",
-     "start_time": "2023-06-13T01:11:52.247191090Z"
+     "end_time": "2023-06-13T02:11:36.980065442Z",
+     "start_time": "2023-06-13T02:11:36.979165118Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 444,
+   "outputs": [],
+   "source": [
+    "# Функция для визуализации\n",
+    "def visualize_fuzzy_sets(user, knowledge_base):\n",
+    "    for attr_name, attr_value in user.items():\n",
+    "        if attr_name in knowledge_base[\"attributes\"]:\n",
+    "            attribute = knowledge_base[\"attributes\"][attr_name]\n",
+    "            if \"fuzzy_sets\" in attribute:\n",
+    "                for fuzzy_set_name, points in attribute[\"fuzzy_sets\"].items():\n",
+    "                    x = np.linspace(0, max(points), 100)\n",
+    "                    membership_function = fuzz.trapmf(x, points)\n",
+    "                    plt.plot(x, membership_function, label=fuzzy_set_name)\n",
+    "\n",
+    "                memberships = fuzzify(user[attr_name], attribute[\"fuzzy_sets\"])\n",
+    "\n",
+    "                # Вычисление максимального уровня членства\n",
+    "                max_membership = max(memberships.values())\n",
+    "\n",
+    "                for fuzzy_set_name, membership in memberships.items():\n",
+    "                    # Проверка, если степень принадлежности равна максимальной, то рисуем точку\n",
+    "                    if membership == max_membership:\n",
+    "                        plt.scatter(\n",
+    "                            user[attr_name],\n",
+    "                            membership,\n",
+    "                            color='yellow',\n",
+    "                            s=100,\n",
+    "                            label=f\"user\"\n",
+    "                        )\n",
+    "                        break\n",
+    "\n",
+    "                plt.title(attr_name)\n",
+    "                plt.ylabel(\"Membership\")\n",
+    "                plt.xlabel(\"Value\")\n",
+    "                plt.legend(loc=\"center right\")\n",
+    "                plt.grid(True)\n",
+    "                plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-13T02:11:36.980111759Z",
+     "start_time": "2023-06-13T02:11:36.979238817Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 445,
    "outputs": [],
    "source": [
     "# Функция применяет правила из базы знаний к атрибутам пользователя\n",
@@ -122,14 +173,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T01:11:52.248834652Z",
-     "start_time": "2023-06-13T01:11:52.247268296Z"
+     "end_time": "2023-06-13T02:11:36.980157035Z",
+     "start_time": "2023-06-13T02:11:36.979347041Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 446,
    "outputs": [
     {
      "name": "stdout",
@@ -142,10 +193,10 @@
       "Для пользователя с атрибутами {'age': 80, 'income': 100000, 'credit_history': 1}, решение: rejected\n",
       "Для пользователя с атрибутами {'age': 50, 'income': 80000, 'credit_history': 0}, решение: rejected\n",
       "Для пользователя с атрибутами {'age': 30, 'income': 40000, 'credit_history': 1}, решение: approved\n",
-      "Для пользователя с атрибутами {'age': 25, 'income': 60000, 'credit_history': 1}, решение: rejected\n",
+      "Для пользователя с атрибутами {'age': 25, 'income': 60000, 'credit_history': 1}, решение: approved\n",
       "Для пользователя с атрибутами {'age': 45, 'income': 70000, 'credit_history': 0}, решение: rejected\n",
       "Для пользователя с атрибутами {'age': 40, 'income': 55000, 'credit_history': 0.5}, решение: approved\n",
-      "Для пользователя с атрибутами {'age': 25, 'income': 45000, 'credit_history': 0.5}, решение: rejected\n"
+      "Для пользователя с атрибутами {'age': 22, 'income': 45000, 'credit_history': 0.5}, решение: rejected\n"
      ]
     }
    ],
@@ -161,18 +212,19 @@
     "    {'age': 25, 'income': 60000, 'credit_history': 1},\n",
     "    {'age': 45, 'income': 70000, 'credit_history': 0},\n",
     "    {'age': 40, 'income': 55000, 'credit_history': 0.5},\n",
-    "    {'age': 25, 'income': 45000, 'credit_history': 0.5}\n",
+    "    {'age': 22, 'income': 45000, 'credit_history': 0.5}\n",
     "]\n",
     "\n",
     "# Для каждого пользователя рисуем график\n",
     "for user in users:\n",
-    "    apply_rules(user, knowledge_base['rules'], knowledge_base)"
+    "    apply_rules(user, knowledge_base['rules'], knowledge_base)\n",
+    "    #visualize_fuzzy_sets(user, knowledge_base)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T01:11:52.259794373Z",
-     "start_time": "2023-06-13T01:11:52.247364216Z"
+     "end_time": "2023-06-13T02:11:36.993457477Z",
+     "start_time": "2023-06-13T02:11:36.979428614Z"
     }
    }
   }
