Knowlege base for lab4 tuned, users array moved to top

--- a/lab4-fuzzy/fuzzy-inference.ipynb
+++ b/lab4-fuzzy/fuzzy-inference.ipynb
@@ -27,7 +27,23 @@
     "import yaml\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fuzzy_limit = 0.25"
+    "# Предел после которого считаем, что значение принадлежит множеству\n",
+    "fuzzy_limit = 0.25\n",
+    "\n",
+    "# Анализируемые пользователи\n",
+    "users = [\n",
+    "    {'age': 20, 'income': 20000, 'credit_history': 0},\n",
+    "    {'age': 15, 'income': 25000, 'credit_history': 1},\n",
+    "    {'age': 35, 'income': 80000, 'credit_history': 1},\n",
+    "    {'age': 22, 'income': 30000, 'credit_history': 1},\n",
+    "    {'age': 80, 'income': 100000, 'credit_history': 1},\n",
+    "    {'age': 50, 'income': 80000, 'credit_history': 0},\n",
+    "    {'age': 30, 'income': 40000, 'credit_history': 1},\n",
+    "    {'age': 25, 'income': 60000, 'credit_history': 1},\n",
+    "    {'age': 45, 'income': 70000, 'credit_history': 0},\n",
+    "    {'age': 40, 'income': 55000, 'credit_history': 0.5},\n",
+    "    {'age': 22, 'income': 45000, 'credit_history': 0.5}\n",
+    "]"
    ],
    "metadata": {
     "collapsed": false,
@@ -201,20 +217,6 @@
     }
    ],
    "source": [
-    "users = [\n",
-    "    {'age': 20, 'income': 20000, 'credit_history': 0},\n",
-    "    {'age': 15, 'income': 25000, 'credit_history': 1},\n",
-    "    {'age': 35, 'income': 80000, 'credit_history': 1},\n",
-    "    {'age': 22, 'income': 30000, 'credit_history': 1},\n",
-    "    {'age': 80, 'income': 100000, 'credit_history': 1},\n",
-    "    {'age': 50, 'income': 80000, 'credit_history': 0},\n",
-    "    {'age': 30, 'income': 40000, 'credit_history': 1},\n",
-    "    {'age': 25, 'income': 60000, 'credit_history': 1},\n",
-    "    {'age': 45, 'income': 70000, 'credit_history': 0},\n",
-    "    {'age': 40, 'income': 55000, 'credit_history': 0.5},\n",
-    "    {'age': 22, 'income': 45000, 'credit_history': 0.5}\n",
-    "]\n",
-    "\n",
     "# Для каждого пользователя рисуем график\n",
     "for user in users:\n",
     "    apply_rules(user, knowledge_base['rules'], knowledge_base)\n",
